--- a/code/demo_realworld_set_robot.ipynb
+++ b/code/demo_realworld_set_robot.ipynb
@@ -430,7 +430,151 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Implement about RealRobot Class."
+    "import roslib; roslib.load_manifest('ur_driver')\n",
+    "import rospy\n",
+    "import actionlib\n",
+    "from control_msgs.msg import *\n",
+    "from trajectory_msgs.msg import *\n",
+    "from sensor_msgs.msg import JointState\n",
+    "\"\"\" FOR ONROBOT RG2 \"\"\"\n",
+    "from pymodbus.client.sync import ModbusTcpClient\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Implement about RealRobot Class.\n",
+    "class RealRobot:\n",
+    "    def __init__(self):\n",
+    "        self.client = None\n",
+    "        self.JOINT_NAMES = ['shoulder_pan_joint', 'shoulder_lift_joint', 'elbow_joint',\n",
+    "                            'wrist_1_joint', 'wrist_2_joint', 'wrist_3_joint']\n",
+    "        self.arm_pub     = rospy.Publisher('arm_controller/command', JointTrajectory, queue_size = 10)\n",
+    "\n",
+    "    def linear_move(self, start_pos, target_pos, desired_vel, offset_angle, num_interpol, mode):\n",
+    "        freq = 500\n",
+    "        if mode == \"forward\":\n",
+    "            \"\"\" Start Pose \"\"\"\n",
+    "            q_ik_start = env.solve_ik(\n",
+    "                body_name='tcp_link',p_trgt=np.array([0.5, 0.3, 1.20]),R_trgt=R_trgt,\n",
+    "                IK_P=True,IK_R=True, q_init=joint_value,idxs_forward=idxs_forward, idxs_jacobian=idxs_jacobian,\n",
+    "                RESET=False,DO_RENDER=False,render_every=10,th=1*np.pi/180.0,err_th=1e-3)\n",
+    "   \n",
+    "            q_list_start = self.chain.get_q_from_ik(variable_start)\n",
+    "            q_list_start = q_list_start[1:7] # Excluding base joint\n",
+    "            ctrl_q_list_start = q_list_start.reshape(-1,)        \n",
+    "            ctrl_q_list_start[0] = offset_angle\n",
+    "            ctrl_q_list_start[4] = 1.57\n",
+    "\n",
+    "        elif mode == \"upward\":\n",
+    "            \"\"\" Start Pose \"\"\"\n",
+    "            q_ik_start = env.solve_ik(\n",
+    "                body_name='tcp_link',p_trgt=np.array([0.5, 0.3, 1.20]),R_trgt=R_trgt,\n",
+    "                IK_P=True,IK_R=True, q_init=joint_value,idxs_forward=idxs_forward, idxs_jacobian=idxs_jacobian,\n",
+    "                RESET=False,DO_RENDER=False,render_every=10,th=1*np.pi/180.0,err_th=1e-3)\n",
+    "\n",
+    "            q_list_start = self.chain.get_q_from_ik(variable_start)\n",
+    "            q_list_start = q_list_start[1:7] # Excluding base joint\n",
+    "            ctrl_q_list_start = q_list_start.reshape(-1,)   \n",
+    "\n",
+    "        \"\"\" Goal Pose \"\"\"\n",
+    "        q_ik_goal = env.solve_ik(\n",
+    "            body_name='tcp_link',p_trgt=np.array([0.5, 0.3, 1.20]),R_trgt=R_trgt,\n",
+    "            IK_P=True,IK_R=True, q_init=joint_value,idxs_forward=idxs_forward, idxs_jacobian=idxs_jacobian,\n",
+    "            RESET=False,DO_RENDER=False,render_every=10,th=1*np.pi/180.0,err_th=1e-3)\n",
+    "\n",
+    "        q_list_goal = self.chain.get_q_from_ik(variable)\n",
+    "        q_list_goal = q_list_goal[1:7] # Excluding base joint\n",
+    "        ctrl_q_list_goal = q_list_goal.reshape(-1,)  \n",
+    "        q_list=[]\n",
+    "        q_list.append(ctrl_q_list_start);q_list.append(ctrl_q_list_goal)\n",
+    "        desired_time = self.get_desired_time(start_pos, target_pos, desired_vel)\n",
+    "        # secured_q    = self.joint_limit(interpoled_q)\n",
+    "        interpoled_q=self.q_interpolation(q_list,desired_time,freq)\n",
+    "        return interpoled_q\n",
+    "\n",
+    "\n",
+    "    def capture_pose(self):\n",
+    "        try: \n",
+    "            q = [(-90)/180*math.pi, (-132.46)/180*math.pi, (122.85)/180*math.pi, (99.65)/180*math.pi, (45)/180*math.pi, (-90.02)/180*math.pi]\n",
+    "            g = FollowJointTrajectoryGoal()\n",
+    "            g.trajectory = JointTrajectory()\n",
+    "            g.trajectory.joint_names = self.JOINT_NAMES\n",
+    "            joint_states = rospy.wait_for_message(\"joint_states\", JointState)\n",
+    "            joints_pos   = joint_states.position\n",
+    "            g.trajectory.points = [\n",
+    "                JointTrajectoryPoint(positions=joints_pos, velocities=[0]*6, time_from_start=rospy.Duration(0.0)),\n",
+    "                JointTrajectoryPoint(positions=q, velocities=[0]*6, time_from_start=rospy.Duration(3))]  \n",
+    "            self.client.send_goal(g)\n",
+    "            self.client.wait_for_result()\n",
+    "        except KeyboardInterrupt:\n",
+    "            self.client.cancel_goal()\n",
+    "            raise\n",
+    "        except:\n",
+    "            raise\n",
+    "\n",
+    "    def move_(self, joint_list=None): \n",
+    "        try: \n",
+    "            # rospy.init_node(\"test_move\", anonymous=True, disable_signals=True)\n",
+    "            self.client = actionlib.SimpleActionClient('follow_joint_trajectory', FollowJointTrajectoryAction)\n",
+    "            print(\"Waiting for server...\")\n",
+    "            self.client.wait_for_server()\n",
+    "            print(\"Connected to server\")\n",
+    "            parameters = rospy.get_param(None)\n",
+    "            index = str(parameters).find('prefix')\n",
+    "            if (index > 0):\n",
+    "                prefix = str(parameters)[index+len(\"prefix': '\"):(index+len(\"prefix': '\")+str(parameters)[index+len(\"prefix': '\"):-1].find(\"'\"))]\n",
+    "                for i, name in enumerate(self.JOINT_NAMES):\n",
+    "                    self.JOINT_NAMES[i] = prefix + name\n",
+    "            self.move_trajectory(joint_list=joint_list)\n",
+    "\n",
+    "            # order = input(\"Continue? y/n: \")\n",
+    "            # if order==\"y\": \n",
+    "            #     self.move_trajectory(joint_list=joint_list)\n",
+    "            # else: \n",
+    "            #     print(\"Stop\")\n",
+    "        except KeyboardInterrupt:\n",
+    "            rospy.signal_shutdown(\"KeyboardInterrupt\")\n",
+    "            raise\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_robot = RealRobot()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set to Initial Pose.\n",
+    "real_robot.move_capture_pose();time.sleep(1)\n",
+    "\n",
+    "# Real-World Execution \n",
+    "real_robot.main(joint_list=interpoled_q)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" NP LINEAR GRASP \"\"\"\n",
+    "openGrasp(400,1200,graspclient)\n",
+    "# Grasp object \n",
+    "q_list_linear = kin_robot.linear_move(start_pos=[0.73,0,0.83], target_pos=p_tcp, desired_vel=0.1, offset_angle=-0.1, num_interpol=500, mode='forward')\n",
+    "real_robot.main_slow(joint_list=q_list_linear)\n"
    ]
   }
  ],
