--- a/code/demo_realworld_perception.ipynb
+++ b/code/demo_realworld_perception.ipynb
@@ -6175,22 +6175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.21049237,  0.80787299,  0.40624684])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "center_position_array"
+    "np.save(\"center_position_array.npy\", center_position_array)"
    ]
   }
  ],
