update collision checking

--- a/code/demo_sim_collision_check.ipynb
+++ b/code/demo_sim_collision_check.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MuJoCo version:[2.3.4]\n"
+      "MuJoCo version:[2.3.2]\n"
      ]
     }
    ],
@@ -37,6 +37,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,15 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[100/1000] IK error:[0.1392]\n",
-      "[200/1000] IK error:[0.1392]\n",
       "Pressed ESC\n",
       "Quitting.\n",
       "Done.\n"
@@ -237,7 +236,7 @@
     "                       label='')\n",
     "        env.plot_arrow(p=p_contact,uv=-f_uv,r_stem=0.01,len_arrow=f_len,rgba=[1,0,0,1],\n",
     "                       label='')\n",
-    "        label = '' # '[%s]-[%s]'%(geom1,geom2)\n",
+    "        label = 'Contact point' # '[%s]-[%s]'%(geom1,geom2)\n",
     "        env.plot_sphere(p=p_contact,r=0.02,rgba=[1,0.2,0.2,1],label=label)\n",
     "    env.plot_T(p=[0,0,0],R=np.eye(3,3),PLOT_AXIS=True,axis_len=1.0)\n",
     "    env.render()\n",
@@ -254,86 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "1\n",
-      "['ur_forearm_link_2_collision']\n",
-      "Pressed ESC\n",
-      "Quitting.\n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "GLFW window does not exist but you tried to render.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[93], line 46\u001b[0m\n\u001b[1;32m     44\u001b[0m             env\u001b[39m.\u001b[39mplot_T(p\u001b[39m=\u001b[39mp_tcp,R\u001b[39m=\u001b[39mR_tcp,PLOT_AXIS\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,axis_len\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m,axis_width\u001b[39m=\u001b[39m\u001b[39m0.005\u001b[39m)\n\u001b[1;32m     45\u001b[0m             env\u001b[39m.\u001b[39mplot_T(p\u001b[39m=\u001b[39mp_trgt,R\u001b[39m=\u001b[39mR_trgt,PLOT_AXIS\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,axis_len\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m,axis_width\u001b[39m=\u001b[39m\u001b[39m0.005\u001b[39m)\n\u001b[0;32m---> 46\u001b[0m             env\u001b[39m.\u001b[39;49mrender()\n\u001b[1;32m     47\u001b[0m \u001b[39m# Back to back-uped position\u001b[39;00m\n\u001b[1;32m     48\u001b[0m q_ik \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mget_q(joint_idxs\u001b[39m=\u001b[39midxs_forward)\n",
-      "File \u001b[0;32m~/course/xai615-realworld/code/../model/mujoco_parser.py:251\u001b[0m, in \u001b[0;36mMuJoCoParserClass.render\u001b[0;34m(self, render_every)\u001b[0m\n\u001b[1;32m    249\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mUSE_MUJOCO_VIEWER:\n\u001b[1;32m    250\u001b[0m     \u001b[39mif\u001b[39;00m ((\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrender_tick \u001b[39m%\u001b[39m render_every) \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m) \u001b[39mor\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrender_tick \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m):\n\u001b[0;32m--> 251\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mviewer\u001b[39m.\u001b[39;49mrender()\n\u001b[1;32m    252\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrender_tick \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrender_tick \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    253\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/mujoco_viewer/mujoco_viewer.py:309\u001b[0m, in \u001b[0;36mMujocoViewer.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    306\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m(\n\u001b[1;32m    307\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUse \u001b[39m\u001b[39m'\u001b[39m\u001b[39mread_pixels()\u001b[39m\u001b[39m'\u001b[39m\u001b[39m for \u001b[39m\u001b[39m'\u001b[39m\u001b[39moffscreen\u001b[39m\u001b[39m'\u001b[39m\u001b[39m mode.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    308\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_alive:\n\u001b[0;32m--> 309\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\n\u001b[1;32m    310\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mGLFW window does not exist but you tried to render.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    311\u001b[0m \u001b[39mif\u001b[39;00m glfw\u001b[39m.\u001b[39mwindow_should_close(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwindow):\n\u001b[1;32m    312\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclose()\n",
-      "\u001b[0;31mException\u001b[0m: GLFW window does not exist but you tried to render."
+      "Done.\n"
      ]
     }
    ],
@@ -393,9 +320,7 @@
     "\n",
     "# Close viewer\n",
     "env.close_viewer()\n",
-    "print (\"Done.\")\n",
-    "\n",
-    "print(q_ik)"
+    "print (\"Done.\")"
    ]
   },
   {
